<resources>
    <string name="app_name">Cadastro</string>
    <string name="name_person_form">Nome completo</string>
    <string name="phone_person_form">Telefone</string>
    <string name="email_person_form">E-mail</string>
    <string name="cb_accept_email_person_form">Ingressar na lista de e-mails?</string>
    <string name="label_genre_person_form">Sexo</string>
    <string name="genre_male_person_form">Masculino</string>
    <string name="genre_female_person_form">Feminino</string>
    <string name="label_city_person_form">Cidade</string>
    <string name="value_button_clear_form">Limpar</string>
    <string name="value_button_save_form">Salvar</string>
    <string name="example_hint_phone_form">Ex.: 12-93456-7890</string>
    <string-array name="arrayUF">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal*</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
</resources>